test/Dialect/LLZK/Inputs/header_7C.llzk
// Imported via `include_fail.llzk`

module attributes {veridise.lang = "llzk"} {
  // expected-error@+1 {{found cyclic include}}
  llzk.include "Inputs/header_7A.llzk" as @cycle

  llzk.func private @func_in_7c()
}
